--- a/BasicCoreProgram1/BasicCoreProgram1.csproj
+++ b/BasicCoreProgram1/BasicCoreProgram1.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factors.cs" />
     <Compile Include="FlipCoin.cs" />
     <Compile Include="HarmonicNumbers.cs" />
     <Compile Include="LeapYear.cs" />
