--- a/BasicCoreProgram1/BasicCoreProgram1.csproj
+++ b/BasicCoreProgram1/BasicCoreProgram1.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuotientAndRemainder.cs" />
     <Compile Include="SwapTwoNumbers.cs" />
+    <Compile Include="VowelOrConsonant.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
