--- a/BasicCoreProgram1/BasicCoreProgram1.csproj
+++ b/BasicCoreProgram1/BasicCoreProgram1.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Factors.cs" />
     <Compile Include="FlipCoin.cs" />
     <Compile Include="HarmonicNumbers.cs" />
+    <Compile Include="LargestOfThreeNumbers.cs" />
     <Compile Include="LeapYear.cs" />
     <Compile Include="PowerOf2.cs" />
     <Compile Include="Program.cs" />
